add 2Layer models

--- a/results_ipynb/debug/cnn/cnn_wrapper.ipynb
+++ b/results_ipynb/debug/cnn/cnn_wrapper.ipynb
@@ -59,7 +59,8 @@
       "        \"stride\": 2,\n",
       "        \"padding\": 0,\n",
       "        \"pool_type\": \"max\"\n",
-      "      }\n",
+      "      },\n",
+      "      \"dilation\": 1\n",
       "    }\n",
       "  ],\n",
       "  \"fc\": {\n",
@@ -142,7 +143,7 @@
       "========done epoch 3000==========\n",
       "early stopping after epoch 3400\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_sgd_mse 0.710113 28.66959309577942 sec\n",
+      "1e-3L2_1e-3L2_sgd_mse 0.710113 27.463416814804077 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -199,7 +200,7 @@
       "========done epoch 3500==========\n",
       "early stopping after epoch 3900\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_adam002_mse 0.690141 34.99722695350647 sec\n",
+      "1e-3L2_1e-3L2_adam002_mse 0.690141 31.937077283859253 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -262,7 +263,7 @@
       "========done epoch 4000==========\n",
       "early stopping after epoch 4300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_sgd_mse 0.711871 38.81791663169861 sec\n",
+      "1e-4L2_1e-3L2_sgd_mse 0.711871 57.452399492263794 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -379,7 +380,7 @@
       "========done epoch 8000==========\n",
       "early stopping after epoch 8300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_adam002_mse 0.683987 74.1102397441864 sec\n",
+      "1e-4L2_1e-3L2_adam002_mse 0.683987 123.14118504524231 sec\n",
       "best config 1e-4L2_1e-3L2_sgd_mse with val 0.711871 and test 0.677659\n"
      ]
     }
