add performance vs model size plot

--- a/results_ipynb/debug/glm_preprocessing_check.ipynb
+++ b/results_ipynb/debug/glm_preprocessing_check.ipynb
@@ -236,6 +236,60 @@
     "check_one_case('MkE2_Shape', 'OT')\n",
     "check_one_case('MkE2_Shape', 'all')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linear\n",
+      "fpower\n",
+      "gqm.2\n",
+      "preserved quadratic variance: 0.984774204648\n",
+      "gqm.4\n",
+      "preserved quadratic variance: 0.982502115613\n",
+      "gqm.8\n",
+      "preserved quadratic variance: 0.981313197938\n",
+      "linear\n",
+      "fpower\n",
+      "gqm.2\n",
+      "preserved quadratic variance: 0.975094573601\n",
+      "gqm.4\n",
+      "preserved quadratic variance: 0.962142955424\n",
+      "gqm.8\n",
+      "preserved quadratic variance: 0.942464514896\n",
+      "linear\n",
+      "fpower\n",
+      "gqm.2\n",
+      "preserved quadratic variance: 0.994628615383\n",
+      "gqm.4\n",
+      "preserved quadratic variance: 0.994249843927\n",
+      "gqm.8\n",
+      "preserved quadratic variance: 0.994098443161\n",
+      "linear\n",
+      "fpower\n",
+      "gqm.2\n",
+      "preserved quadratic variance: 0.979457450187\n",
+      "gqm.4\n",
+      "preserved quadratic variance: 0.968309405494\n",
+      "gqm.8\n",
+      "preserved quadratic variance: 0.952422547807\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try 8 channel version,\n",
+    "# or 784 (785-1)\n",
+    "transformer_dict = glm_data_preprocessing.generate_transformer_dict(784)\n",
+    "check_one_case('MkA_Shape', 'OT')\n",
+    "check_one_case('MkA_Shape', 'all')\n",
+    "check_one_case('MkE2_Shape', 'OT')\n",
+    "check_one_case('MkE2_Shape', 'all')"
+   ]
   }
  ],
  "metadata": {
