debug against older implementation of v1 mask cnn

--- a/results_ipynb/debug/cnn/cnn_wrapper_2L.ipynb
+++ b/results_ipynb/debug/cnn/cnn_wrapper_2L.ipynb
@@ -55,7 +55,8 @@
       "      \"bn\": false,\n",
       "      \"padding\": 0,\n",
       "      \"pool\": null,\n",
-      "      \"dilation\": 2\n",
+      "      \"dilation\": 2,\n",
+      "      \"bn_affine\": true\n",
       "    },\n",
       "    {\n",
       "      \"kernel_size\": 3,\n",
@@ -69,16 +70,19 @@
       "        \"padding\": 0,\n",
       "        \"pool_type\": \"max\"\n",
       "      },\n",
-      "      \"dilation\": 1\n",
+      "      \"dilation\": 1,\n",
+      "      \"bn_affine\": true\n",
       "    }\n",
       "  ],\n",
       "  \"fc\": {\n",
       "    \"factored\": false,\n",
       "    \"dropout\": null,\n",
-      "    \"mlp\": null\n",
+      "    \"mlp\": null,\n",
+      "    \"factored_constraint\": null\n",
       "  },\n",
       "  \"act_fn\": \"relu\",\n",
-      "  \"linear_output\": true\n",
+      "  \"linear_output\": true,\n",
+      "  \"conv_last_no_act\": false\n",
       "}\n"
      ]
     }
@@ -136,7 +140,7 @@
       "========done epoch 1500==========\n",
       "early stopping after epoch 1800\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_sgd_mse 0.640144 39.968283891677856 sec\n",
+      "1e-3L2_1e-3L2_sgd_mse 0.640144 40.514846086502075 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 7, kernel_size=(5, 5), stride=(1, 1), dilation=(2, 2))\n",
@@ -183,7 +187,7 @@
       "========done epoch 2500==========\n",
       "early stopping after epoch 2500\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_adam002_mse 0.648404 55.55868911743164 sec\n",
+      "1e-3L2_1e-3L2_adam002_mse 0.648404 55.89201903343201 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 7, kernel_size=(5, 5), stride=(1, 1), dilation=(2, 2))\n",
@@ -230,7 +234,7 @@
       "========done epoch 2500==========\n",
       "early stopping after epoch 2500\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_sgd_mse 0.649232 55.435880184173584 sec\n",
+      "1e-4L2_1e-3L2_sgd_mse 0.649232 55.18152570724487 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 7, kernel_size=(5, 5), stride=(1, 1), dilation=(2, 2))\n",
@@ -277,7 +281,7 @@
       "========done epoch 2500==========\n",
       "early stopping after epoch 2800\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_adam002_mse 0.665129 47.062925577163696 sec\n",
+      "1e-4L2_1e-3L2_adam002_mse 0.665129 61.72877502441406 sec\n",
       "best config 1e-4L2_1e-3L2_adam002_mse with val 0.665129 and test 0.680480\n"
      ]
     }
