--- a/results_ipynb/debug/cnn/cnn_wrapper_bn.ipynb
+++ b/results_ipynb/debug/cnn/cnn_wrapper_bn.ipynb
@@ -82,16 +82,19 @@
       "        \"padding\": 0,\n",
       "        \"pool_type\": \"max\"\n",
       "      },\n",
-      "      \"dilation\": 1\n",
+      "      \"dilation\": 1,\n",
+      "      \"bn_affine\": true\n",
       "    }\n",
       "  ],\n",
       "  \"fc\": {\n",
       "    \"factored\": false,\n",
       "    \"dropout\": null,\n",
-      "    \"mlp\": null\n",
+      "    \"mlp\": null,\n",
+      "    \"factored_constraint\": null\n",
       "  },\n",
       "  \"act_fn\": \"relu\",\n",
-      "  \"linear_output\": true\n",
+      "  \"linear_output\": true,\n",
+      "  \"conv_last_no_act\": false\n",
       "}\n"
      ]
     }
@@ -129,7 +132,7 @@
       ")\n",
       "# of params 892\n",
       "========starting phase 1/1==========\n",
-      "1e-3L2_1e-3L2_sgd_mse 0.0 0.3975508213043213 sec\n",
+      "1e-3L2_1e-3L2_sgd_mse 0.0 0.3971273899078369 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 9, kernel_size=(9, 9), stride=(1, 1), bias=False)\n",
@@ -169,7 +172,7 @@
       "========done epoch 2000==========\n",
       "early stopping after epoch 2100\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_adam002_mse 0.477808 17.865504503250122 sec\n",
+      "1e-3L2_1e-3L2_adam002_mse 0.477808 81.9230089187622 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 9, kernel_size=(9, 9), stride=(1, 1), bias=False)\n",
@@ -183,7 +186,7 @@
       ")\n",
       "# of params 892\n",
       "========starting phase 1/1==========\n",
-      "1e-4L2_1e-3L2_sgd_mse 0.0 0.1667773723602295 sec\n",
+      "1e-4L2_1e-3L2_sgd_mse 0.0 4.519753456115723 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 9, kernel_size=(9, 9), stride=(1, 1), bias=False)\n",
@@ -247,7 +250,7 @@
       "========done epoch 4000==========\n",
       "early stopping after epoch 4400\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_adam002_mse 0.48626 176.3910267353058 sec\n",
+      "1e-4L2_1e-3L2_adam002_mse 0.48626 227.49318480491638 sec\n",
       "best config 1e-4L2_1e-3L2_adam002_mse with val 0.486260 and test 0.489259\n"
      ]
     }
