--- a/results_ipynb/debug/cnn/cnn_wrapper.ipynb
+++ b/results_ipynb/debug/cnn/cnn_wrapper.ipynb
@@ -60,16 +60,19 @@
       "        \"padding\": 0,\n",
       "        \"pool_type\": \"max\"\n",
       "      },\n",
-      "      \"dilation\": 1\n",
+      "      \"dilation\": 1,\n",
+      "      \"bn_affine\": true\n",
       "    }\n",
       "  ],\n",
       "  \"fc\": {\n",
       "    \"factored\": false,\n",
       "    \"dropout\": null,\n",
-      "    \"mlp\": null\n",
+      "    \"mlp\": null,\n",
+      "    \"factored_constraint\": null\n",
       "  },\n",
       "  \"act_fn\": \"relu\",\n",
-      "  \"linear_output\": true\n",
+      "  \"linear_output\": true,\n",
+      "  \"conv_last_no_act\": false\n",
       "}\n"
      ]
     }
@@ -143,7 +146,7 @@
       "========done epoch 3000==========\n",
       "early stopping after epoch 3400\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_sgd_mse 0.710113 27.463416814804077 sec\n",
+      "1e-3L2_1e-3L2_sgd_mse 0.710113 54.442981481552124 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -200,7 +203,7 @@
       "========done epoch 3500==========\n",
       "early stopping after epoch 3900\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_adam002_mse 0.690141 31.937077283859253 sec\n",
+      "1e-3L2_1e-3L2_adam002_mse 0.690141 62.92197394371033 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -263,7 +266,7 @@
       "========done epoch 4000==========\n",
       "early stopping after epoch 4300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_sgd_mse 0.711871 57.452399492263794 sec\n",
+      "1e-4L2_1e-3L2_sgd_mse 0.711871 70.72908282279968 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -380,7 +383,7 @@
       "========done epoch 8000==========\n",
       "early stopping after epoch 8300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_adam002_mse 0.683987 123.14118504524231 sec\n",
+      "1e-4L2_1e-3L2_adam002_mse 0.683987 90.72216820716858 sec\n",
       "best config 1e-4L2_1e-3L2_sgd_mse with val 0.711871 and test 0.677659\n"
      ]
     }
