working on BN models as well

--- a/results_ipynb/plots/debug/vgg.ipynb
+++ b/results_ipynb/plots/debug/vgg.ipynb
@@ -26,45 +26,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['vgg16+legacy+conv1_1',\n",
-       " 'vgg16+legacy+conv1_2',\n",
-       " 'vgg16+legacy+pool1',\n",
-       " 'vgg16+legacy+conv2_1',\n",
-       " 'vgg16+legacy+conv2_2',\n",
-       " 'vgg16+legacy+pool2',\n",
-       " 'vgg16+legacy+conv3_1',\n",
-       " 'vgg16+legacy+conv3_2',\n",
-       " 'vgg16+legacy+conv3_3',\n",
-       " 'vgg16+legacy+pool3',\n",
-       " 'vgg16+legacy+conv4_1',\n",
-       " 'vgg16+legacy+conv4_2',\n",
-       " 'vgg16+legacy+conv4_3',\n",
-       " 'vgg16+legacy+pool4',\n",
-       " 'vgg16+legacy+conv5_1',\n",
-       " 'vgg16+legacy+conv5_2',\n",
-       " 'vgg16+legacy+conv5_3',\n",
-       " 'vgg16+legacy+pool5',\n",
-       " 'vgg16+legacy+fc6',\n",
-       " 'vgg16+legacy+fc7']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "subtype_to_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [],
    "source": [
     "def modelname_alternative(_1, x, _2, _3):\n",
@@ -75,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_all(squared, score_col_name):\n",
     "    models_to_examine = [\n",
-    "        ('cnnpre', x) for x in subtype_to_train\n",
+    "        ('cnnpre', x) for x in subtype_to_train if x.startswith('vgg16')  # both bn or nonbn\n",
     "    ]\n",
     "    \n",
     "    \n",
@@ -97,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +110,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"20\" valign=\"top\">MkA_Shape</th>\n",
+       "      <th rowspan=\"40\" valign=\"top\">MkA_Shape</th>\n",
        "      <th>vgg16,00,conv1_1</th>\n",
        "      <td>0.212053</td>\n",
        "    </tr>\n",
@@ -229,36 +190,136 @@
        "      <th>vgg16,19,fc7</th>\n",
        "      <td>0.327826</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,00,conv1_1</th>\n",
+       "      <td>0.189283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,01,conv1_2</th>\n",
+       "      <td>0.230377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,02,pool1</th>\n",
+       "      <td>0.257080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,03,conv2_1</th>\n",
+       "      <td>0.298505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,04,conv2_2</th>\n",
+       "      <td>0.321338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,05,pool2</th>\n",
+       "      <td>0.350335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,06,conv3_1</th>\n",
+       "      <td>0.370162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,07,conv3_2</th>\n",
+       "      <td>0.274198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,08,conv3_3</th>\n",
+       "      <td>0.297102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,09,pool3</th>\n",
+       "      <td>0.313145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,10,conv4_1</th>\n",
+       "      <td>0.395748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,11,conv4_2</th>\n",
+       "      <td>0.382420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,12,conv4_3</th>\n",
+       "      <td>0.358069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,13,pool4</th>\n",
+       "      <td>0.352883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,14,conv5_1</th>\n",
+       "      <td>0.347730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,15,conv5_2</th>\n",
+       "      <td>0.324486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,16,conv5_3</th>\n",
+       "      <td>0.288244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,17,pool5</th>\n",
+       "      <td>0.296526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,18,fc6</th>\n",
+       "      <td>0.351612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,19,fc7</th>\n",
+       "      <td>0.321810</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "subset                           all\n",
-       "dataset   model                     \n",
-       "MkA_Shape vgg16,00,conv1_1  0.212053\n",
-       "          vgg16,01,conv1_2  0.248452\n",
-       "          vgg16,02,pool1    0.276834\n",
-       "          vgg16,03,conv2_1  0.322921\n",
-       "          vgg16,04,conv2_2  0.339092\n",
-       "          vgg16,05,pool2    0.367980\n",
-       "          vgg16,06,conv3_1  0.386387\n",
-       "          vgg16,07,conv3_2  0.290204\n",
-       "          vgg16,08,conv3_3  0.302682\n",
-       "          vgg16,09,pool3    0.315842\n",
-       "          vgg16,10,conv4_1  0.401131\n",
-       "          vgg16,11,conv4_2  0.376893\n",
-       "          vgg16,12,conv4_3  0.351755\n",
-       "          vgg16,13,pool4    0.344126\n",
-       "          vgg16,14,conv5_1  0.347393\n",
-       "          vgg16,15,conv5_2  0.323108\n",
-       "          vgg16,16,conv5_3  0.278167\n",
-       "          vgg16,17,pool5    0.292808\n",
-       "          vgg16,18,fc6      0.356523\n",
-       "          vgg16,19,fc7      0.327826"
+       "subset                              all\n",
+       "dataset   model                        \n",
+       "MkA_Shape vgg16,00,conv1_1     0.212053\n",
+       "          vgg16,01,conv1_2     0.248452\n",
+       "          vgg16,02,pool1       0.276834\n",
+       "          vgg16,03,conv2_1     0.322921\n",
+       "          vgg16,04,conv2_2     0.339092\n",
+       "          vgg16,05,pool2       0.367980\n",
+       "          vgg16,06,conv3_1     0.386387\n",
+       "          vgg16,07,conv3_2     0.290204\n",
+       "          vgg16,08,conv3_3     0.302682\n",
+       "          vgg16,09,pool3       0.315842\n",
+       "          vgg16,10,conv4_1     0.401131\n",
+       "          vgg16,11,conv4_2     0.376893\n",
+       "          vgg16,12,conv4_3     0.351755\n",
+       "          vgg16,13,pool4       0.344126\n",
+       "          vgg16,14,conv5_1     0.347393\n",
+       "          vgg16,15,conv5_2     0.323108\n",
+       "          vgg16,16,conv5_3     0.278167\n",
+       "          vgg16,17,pool5       0.292808\n",
+       "          vgg16,18,fc6         0.356523\n",
+       "          vgg16,19,fc7         0.327826\n",
+       "          vgg16_bn,00,conv1_1  0.189283\n",
+       "          vgg16_bn,01,conv1_2  0.230377\n",
+       "          vgg16_bn,02,pool1    0.257080\n",
+       "          vgg16_bn,03,conv2_1  0.298505\n",
+       "          vgg16_bn,04,conv2_2  0.321338\n",
+       "          vgg16_bn,05,pool2    0.350335\n",
+       "          vgg16_bn,06,conv3_1  0.370162\n",
+       "          vgg16_bn,07,conv3_2  0.274198\n",
+       "          vgg16_bn,08,conv3_3  0.297102\n",
+       "          vgg16_bn,09,pool3    0.313145\n",
+       "          vgg16_bn,10,conv4_1  0.395748\n",
+       "          vgg16_bn,11,conv4_2  0.382420\n",
+       "          vgg16_bn,12,conv4_3  0.358069\n",
+       "          vgg16_bn,13,pool4    0.352883\n",
+       "          vgg16_bn,14,conv5_1  0.347730\n",
+       "          vgg16_bn,15,conv5_2  0.324486\n",
+       "          vgg16_bn,16,conv5_3  0.288244\n",
+       "          vgg16_bn,17,pool5    0.296526\n",
+       "          vgg16_bn,18,fc6      0.351612\n",
+       "          vgg16_bn,19,fc7      0.321810"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +366,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"20\" valign=\"top\">MkA_Shape</th>\n",
+       "      <th rowspan=\"40\" valign=\"top\">MkA_Shape</th>\n",
        "      <th>vgg16,00,conv1_1</th>\n",
        "      <td>0.302892</td>\n",
        "    </tr>\n",
@@ -385,36 +446,136 @@
        "      <th>vgg16,19,fc7</th>\n",
        "      <td>0.360910</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,00,conv1_1</th>\n",
+       "      <td>0.272300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,01,conv1_2</th>\n",
+       "      <td>0.323009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,02,pool1</th>\n",
+       "      <td>0.345712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,03,conv2_1</th>\n",
+       "      <td>0.396305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,04,conv2_2</th>\n",
+       "      <td>0.420205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,05,pool2</th>\n",
+       "      <td>0.440923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,06,conv3_1</th>\n",
+       "      <td>0.453433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,07,conv3_2</th>\n",
+       "      <td>0.335270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,08,conv3_3</th>\n",
+       "      <td>0.352933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,09,pool3</th>\n",
+       "      <td>0.364882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,10,conv4_1</th>\n",
+       "      <td>0.451845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,11,conv4_2</th>\n",
+       "      <td>0.428934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,12,conv4_3</th>\n",
+       "      <td>0.396422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,13,pool4</th>\n",
+       "      <td>0.394786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,14,conv5_1</th>\n",
+       "      <td>0.393044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,15,conv5_2</th>\n",
+       "      <td>0.358259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,16,conv5_3</th>\n",
+       "      <td>0.314024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,17,pool5</th>\n",
+       "      <td>0.324644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,18,fc6</th>\n",
+       "      <td>0.395550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vgg16_bn,19,fc7</th>\n",
+       "      <td>0.356475</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "subset                           all\n",
-       "dataset   model                     \n",
-       "MkA_Shape vgg16,00,conv1_1  0.302892\n",
-       "          vgg16,01,conv1_2  0.344093\n",
-       "          vgg16,02,pool1    0.369149\n",
-       "          vgg16,03,conv2_1  0.417191\n",
-       "          vgg16,04,conv2_2  0.431578\n",
-       "          vgg16,05,pool2    0.455260\n",
-       "          vgg16,06,conv3_1  0.466032\n",
-       "          vgg16,07,conv3_2  0.343635\n",
-       "          vgg16,08,conv3_3  0.345655\n",
-       "          vgg16,09,pool3    0.356149\n",
-       "          vgg16,10,conv4_1  0.452737\n",
-       "          vgg16,11,conv4_2  0.418476\n",
-       "          vgg16,12,conv4_3  0.389470\n",
-       "          vgg16,13,pool4    0.385806\n",
-       "          vgg16,14,conv5_1  0.385620\n",
-       "          vgg16,15,conv5_2  0.351296\n",
-       "          vgg16,16,conv5_3  0.301276\n",
-       "          vgg16,17,pool5    0.317883\n",
-       "          vgg16,18,fc6      0.398494\n",
-       "          vgg16,19,fc7      0.360910"
+       "subset                              all\n",
+       "dataset   model                        \n",
+       "MkA_Shape vgg16,00,conv1_1     0.302892\n",
+       "          vgg16,01,conv1_2     0.344093\n",
+       "          vgg16,02,pool1       0.369149\n",
+       "          vgg16,03,conv2_1     0.417191\n",
+       "          vgg16,04,conv2_2     0.431578\n",
+       "          vgg16,05,pool2       0.455260\n",
+       "          vgg16,06,conv3_1     0.466032\n",
+       "          vgg16,07,conv3_2     0.343635\n",
+       "          vgg16,08,conv3_3     0.345655\n",
+       "          vgg16,09,pool3       0.356149\n",
+       "          vgg16,10,conv4_1     0.452737\n",
+       "          vgg16,11,conv4_2     0.418476\n",
+       "          vgg16,12,conv4_3     0.389470\n",
+       "          vgg16,13,pool4       0.385806\n",
+       "          vgg16,14,conv5_1     0.385620\n",
+       "          vgg16,15,conv5_2     0.351296\n",
+       "          vgg16,16,conv5_3     0.301276\n",
+       "          vgg16,17,pool5       0.317883\n",
+       "          vgg16,18,fc6         0.398494\n",
+       "          vgg16,19,fc7         0.360910\n",
+       "          vgg16_bn,00,conv1_1  0.272300\n",
+       "          vgg16_bn,01,conv1_2  0.323009\n",
+       "          vgg16_bn,02,pool1    0.345712\n",
+       "          vgg16_bn,03,conv2_1  0.396305\n",
+       "          vgg16_bn,04,conv2_2  0.420205\n",
+       "          vgg16_bn,05,pool2    0.440923\n",
+       "          vgg16_bn,06,conv3_1  0.453433\n",
+       "          vgg16_bn,07,conv3_2  0.335270\n",
+       "          vgg16_bn,08,conv3_3  0.352933\n",
+       "          vgg16_bn,09,pool3    0.364882\n",
+       "          vgg16_bn,10,conv4_1  0.451845\n",
+       "          vgg16_bn,11,conv4_2  0.428934\n",
+       "          vgg16_bn,12,conv4_3  0.396422\n",
+       "          vgg16_bn,13,pool4    0.394786\n",
+       "          vgg16_bn,14,conv5_1  0.393044\n",
+       "          vgg16_bn,15,conv5_2  0.358259\n",
+       "          vgg16_bn,16,conv5_3  0.314024\n",
+       "          vgg16_bn,17,pool5    0.324644\n",
+       "          vgg16_bn,18,fc6      0.395550\n",
+       "          vgg16_bn,19,fc7      0.356475"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
