--- a/results_ipynb/debug/gabor/debug_against_ref_simple.ipynb
+++ b/results_ipynb/debug/gabor/debug_against_ref_simple.ipynb
@@ -87,7 +87,7 @@
       "text/plain": [
        "{'attrs': {'corr_train': 0.59317458},\n",
        " 'corr': 0.59317458,\n",
-       " 'model': functools.partial(<function save_model_to_hdf5_group at 0x2b5ae4178598>, saved_params={'loc': array([[ 0.06087221],\n",
+       " 'model': functools.partial(<function save_model_to_hdf5_group at 0x2b70c8179598>, saved_params={'loc': array([[ 0.06087221],\n",
        "        [-0.12613888]], dtype=float32), 'sigma': array([[ 0.19797152],\n",
        "        [ 0.09099248]], dtype=float32), 'orientation': array([ 0.93673146], dtype=float32), 'frequency': array([ 1.20469427], dtype=float32), 'output_a': array([ 0.04653661], dtype=float32), 'output_b': 0.017098099, 'phase': array([ 4.68309879], dtype=float32), 'bias': array([-0.03233044], dtype=float32)}),\n",
        " 'y_test_hat': array([[ 0.0170981 ,  0.0170981 ,  0.0170981 , ...,  0.0170981 ,\n",
