--- a/results_ipynb/debug/gabor/debug_wrapper_simple.ipynb
+++ b/results_ipynb/debug/gabor/debug_wrapper_simple.ipynb
@@ -85,7 +85,7 @@
       "text/plain": [
        "{'attrs': {'corr_train': 0.57938111},\n",
        " 'corr': 0.64788389,\n",
-       " 'model': functools.partial(<function save_model_to_hdf5_group at 0x2ab6c4df9598>, saved_params={'loc': array([[ 0.06150125],\n",
+       " 'model': functools.partial(<function save_model_to_hdf5_group at 0x2b8fd49bd510>, saved_params={'loc': array([[ 0.06150125],\n",
        "        [-0.1337308 ]], dtype=float32), 'sigma': array([[ 0.20994249],\n",
        "        [ 0.08868654]], dtype=float32), 'orientation': array([ 0.9331919], dtype=float32), 'frequency': array([ 1.17384231], dtype=float32), 'output_a': array([ 0.04350113], dtype=float32), 'output_b': 0.17815343, 'phase': array([ 4.66572618], dtype=float32), 'bias': array([ 0.10475681], dtype=float32)}),\n",
        " 'y_test_hat': array([[ 0.17815343,  0.17815343,  0.17815343, ...,  0.36278272,\n",
